<resources>
    <string name="app_name">FitChrono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chronometer">Chronometer</string>

    <string name="tabatatime">Tabata timer</string>
    <!-- CronoFragment -->
    <string name="chronometerpro">Chronometer </string>
    <string name="buttonstart">Start</string>
    <string name="buttonstop">Stop</string>
    <string name="buttonrestart">Restart</string>
    <string name="buttonlap">Lap</string>
    <!-- TempFragment -->
    <string name="timer">Timer</string>
    <string name="timerfreq">frequently used timers</string>
    <string name="add">Add</string>
    <string name="buttontime">añade tiempo para poder añadir temporizadores</string>
    <!-- Item timer -->
    <string name="stop_button">stop button</string>
    <string name="play_button">play button</string>

</resources>