<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.temporizador.TempFragment"
    android:orientation="vertical">


    <!-- TODO: Update blank fragment layout -->
    <TextView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/timer"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center|top"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="80dp"
        >
        <NumberPicker
            android:id="@+id/npHour"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:theme="@style/NumberPickerTheme"
            />
        <NumberPicker
            android:id="@+id/npMinutes"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:theme="@style/NumberPickerTheme"
            />
        <NumberPicker
            android:id="@+id/npSecond"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:theme="@style/NumberPickerTheme"
            />
        <ImageButton
            android:id="@+id/ibPlayStop"
            android:layout_width="40dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_play"
            android:background="@color/orange"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="80dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="h"
            android:textSize="20sp"
            android:layout_marginStart="35dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="min"
            android:textSize="20sp"
            android:layout_marginStart="45dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="s"
            android:textSize="20sp"
            android:layout_marginStart="40dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerfreq"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_marginStart="150dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTimers"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>